# SeismicID

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  GOAL.md  LICENSE  MODEL_CARD.md  Makefile  README.md  nixpacks.toml  pyproject.toml  railway.json  requirements-dev.txt  requirements.txt  tasks.ps1
backend/: __init__.py
backend/app/: __init__.py  config.py  main.py
backend/tests/: conftest.py  test_analyze_etas_aftershock_decay.py  test_areas.py  test_b_value.py  test_catalog_filter.py  test_clusters.py  test_csep_tests.py  test_decluster_mc.py  test_etas_cross_validation.py  test_etas_ogata_fit.py  test_etas_ogata_likelihood.py  test_etas_ogata_predict.py  test_etas_ogata_spatial.py  test_evaluate_dual_baseline.py  test_features.py  test_forecast_archive_etas.py  test_forecast_service_etas_smoke.py  (+17 more)
docker/: Dockerfile  docker-compose.yml
docs/: ACCURACY_IMPROVEMENT_SPRINTS.md  API.md  ARCHITECTURE.md  BASELINE_ACCURACY_REPORT.md  DATA.md  MAINTENANCE.md  PROBABILITY_GUIDE.md  README.md  TELEGRAM_ALERTS.md  UI_GUIDE.md
frontend/: about.html  area.html  backtest.html  cells.html  changelog.html  events.html  index.html  performance.html  scheduler.html
reports/: catalog_audit_after_ingest.csv  catalog_audit_after_ingest.txt  catalog_audit_before_ingest.csv
scripts/: analyze_etas_aftershock_decay.py  audit_catalog.py  backfill_model_metadata.py  bootstrap_data.py  download_geo_assets.py  evaluate_active_model.py  fetch_latest_events.py  import_catalog_csv.py  maintain_sqlite.py  run_forecast.py  scheduler_tick.py  train_initial.py  worker.py
(+64 files in other folders)
